# bookmarky-api

./: .gitignore  README.md  Taskfile.yaml  pyproject.toml
.github/: staging.yaml
.github/workflows/: build-container-api.yaml  generic-task.yaml  manual-build-main.yaml  push-main.yaml  push-staging.yaml  staging.yaml
docker/: Dockerfile
docker/scripts/: run-kill
examples/api/: add-bookmark.py  create_api_key.py  get-bookmarks.py
extensions/: scratch.txt
extensions/bookmarky/: bookmarky.js  main.js  manifest.json  popup.html
kubernetes-manifests/base/: api-deployment.yaml  api-ingress.yaml  api-svc.yaml  kustomization.yaml
kubernetes-manifests/envs/demo/: kustomization.yaml  network.yaml  sercrets.yaml
kubernetes-manifests/envs/dev/: kustomization.yaml  network.yaml  storage.yaml
kubernetes-manifests/envs/prod/: kustomization.yaml  network.yaml  secrets.yaml  storage.yaml
kubernetes-manifests/envs/stage/: kustomization.yaml  network.yaml  storage.yaml
src/: requirements-dev.txt
src/api/: web-app.py
src/bookmarky/: debug.py
src/bookmarky/api/: app.py  version.py  web-app.py
src/bookmarky/api/collects/: api_keys.py  auto_features.py  base.py  base_entity_metas.py  bookmark_tags.py  bookmark_tracks.py  bookmarks.py  directories.py  options.py  roles.py  tag_features.py  tags.py  users.py
src/bookmarky/introspect/: add_tags.py  auto_dirs.py  auto_features.py  auto_organize.py  debug.py  export.py  get_images.py  import-bookmarks.py  manual-auto-features.py  run.py
src/bookmarky/migrations/: create-user.py  migrate.py
tests/: requirements.txt  setup.py
tests/bookmarky_test_tools/fixtures/: db.py
tests/bookmarky_test_tools/tools/: fakes.py
(+76 files in other folders)
