[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bookmarky"
version = "0.0.0.1"
requires-python = ">=3.11"
dependencies = [
    "gunicorn>=22.0.0",
    "Flask>=3.0.3",
    "requests>=2.32.2",
]

[tool.hatch.build.targets.sdist]
include = [
  "bookmarky/api/*.py",
  "bookmarky/api/models/*.py",
  "bookmarky/api/utils/*.py",
  
]
# exclude = [
#   "*.json",
#   "pkg/_compat.py",
# ]
